--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -2,8 +2,8 @@
 # Klog                                                                        #
 # =========================================================================== #
 
-add_library(klog SHARED klog.h klog.c)
-target_include_directories(klog PUBLIC ${GNEISS_INCLUDE_DIRS})
+add_library(klog SHARED ${GNEISS_INCLUDE_DIR}/klog/klog.h klog.c)
+target_include_directories(klog PUBLIC ${GNEISS_INCLUDE_DIR})
 target_compile_options(klog PUBLIC ${GNEISS_CMAKE_C_FLAGS})
 target_compile_definitions(klog PUBLIC ${GNEISS_COMPILE_DEFINITIONS})
 target_compile_definitions(klog PUBLIC ${GNEISS_COMPILE_DEFINITIONS})
