Pass unit test, with no memory leaks

--- a/test/scratch/CMakeLists.txt
+++ b/test/scratch/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 include(CreateScratchExecutable)
 
-create_scratch_executable(va_args_exploration.c)
 create_scratch_executable(klog_playground.c klog)
 create_scratch_executable(macro_exploration.c)
+create_scratch_executable(munmap_chunk_exploration.c)
 create_scratch_executable(type_exploration.c)
