Use PascalCase for structs

--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -26,3 +26,4 @@ target_compile_definitions(klog PUBLIC ${GNEISS_COMPILE_DEFINITIONS})
 create_unit_test_plain(ut/ut-klog_format_split_strings.c klog)
 create_functional_test(ft/ft-klog_basic.c klog)
 create_functional_test(ft/ft-klog_fail_uninitialized.c klog EXPECT_FAILURE)
+create_functional_test(ft/ft-klog_fail_logger_limit.c klog EXPECT_FAILURE)
