Rename critical to fatal, test some initialization logic

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -4,4 +4,6 @@
 
 include(CreateExampleExecutable)
 
-create_example_executable(hello_world.c)
+if (KLOG_BUILD_EXAMPLES)
+    create_example_executable(hello_world.c)
+endif ()
