--- a/scratch/CMakeLists.txt
+++ b/scratch/CMakeLists.txt
@@ -4,6 +4,9 @@
 
 include(CreateScratchExecutable)
 
-create_scratch_executable(macro_exploration.c)
-create_scratch_executable(munmap_chunk_exploration.c)
-create_scratch_executable(type_exploration.c)
+if (KLOG_BUILD_SCRATCH)
+    create_scratch_executable(array_exploration.c)
+    create_scratch_executable(macro_exploration.c)
+    create_scratch_executable(munmap_chunk_exploration.c)
+    create_scratch_executable(type_exploration.c)
+endif ()
