Update our test suite to error on ALL leaks, and print more nicely

--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -33,5 +33,5 @@ if (KLOG_BUILD_TESTS)
     create_unit_test_plain(ut/ut-klog_initialize_level_strings_buffer.c klog)
     create_functional_test(ft/ft-klog_basic.c klog)
     create_functional_test(ft/ft-klog_fail_uninitialized.c klog EXPECT_FAILURE)
-    create_functional_test(ft/ft-klog_fail_logger_limit.c klog EXPECT_FAILURE)
+    create_functional_test(ft/ft-klog_fail_logger_limit.c klog EXPECT_FAILURE IGNORE_MEMORY)
 endif ()
