Write a lot of tests, stub out more

--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -28,9 +28,15 @@ target_compile_options(klog PUBLIC ${GNEISS_CMAKE_C_FLAGS})
 target_compile_definitions(klog PUBLIC ${GNEISS_COMPILE_DEFINITIONS})
 
 if (KLOG_BUILD_TESTS)
+    create_unit_test_plain(ut/ut-klog_format_filename_prefix.c klog)
+    create_unit_test_plain(ut/ut-klog_format_logger_name.c klog)
+    create_unit_test_plain(ut/ut-klog_format_prefix.c klog)
     create_unit_test_plain(ut/ut-klog_format_split_strings.c klog)
     create_unit_test_plain(ut/ut-klog_initialize_parameters_are_valid.c klog)
     create_unit_test_plain(ut/ut-klog_initialize_level_strings_buffer.c klog)
+    create_unit_test_plain(ut/ut-klog_logger_create.c klog)
+    create_unit_test_plain(ut/ut-klog_logger_set_level.c klog)
+    create_unit_test_plain(ut/ut-klog_message_max_length.c klog)
 
     create_functional_test(ft/ft-klog_basic.c klog)
     create_functional_test(ft/ft-klog_console.c klog)
