add formatting utility for sanitizing logger and file prefix names

--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -31,6 +31,7 @@ if (KLOG_BUILD_TESTS)
     create_unit_test_plain(ut/ut-klog_format_filename_prefix.c klog)
     create_unit_test_plain(ut/ut-klog_format_logger_name.c klog)
     create_unit_test_plain(ut/ut-klog_format_prefix.c klog)
+    create_unit_test_plain(ut/ut-klog_format_source_location.c klog)
     create_unit_test_plain(ut/ut-klog_format_split_strings.c klog)
     create_unit_test_plain(ut/ut-klog_initialize_parameters_are_valid.c klog)
     create_unit_test_plain(ut/ut-klog_initialize_level_strings_buffer.c klog)
@@ -43,6 +44,7 @@ if (KLOG_BUILD_TESTS)
     create_functional_test(ft/ft-klog_file.c klog)
     create_functional_test(ft/ft-klog_fail_uninitialized.c klog EXPECT_FAILURE)
     create_functional_test(ft/ft-klog_fail_logger_limit.c klog EXPECT_FAILURE IGNORE_MEMORY)
+    create_functional_test(ft/ft-klog_fail_level.c klog EXPECT_FAILURE IGNORE_MEMORY)
 
     # create_functional_test(ft/ft-klog_stress_st_sync.c klog)
 endif ()
