--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -32,6 +32,7 @@ if (KLOG_BUILD_TESTS)
     create_unit_test_plain(ut/ut-klog_format_prefix.c klog)
     create_unit_test_plain(ut/ut-klog_format_source_location.c klog)
     create_unit_test_plain(ut/ut-klog_format_split_strings.c klog)
+    create_unit_test_plain(ut/ut-klog_format_time.c klog)
     create_unit_test_plain(ut/ut-klog_initialize_parameters_are_valid.c klog)
     create_unit_test_plain(ut/ut-klog_initialize_level_strings_buffer.c klog)
     create_unit_test_plain(ut/ut-klog_logger_create.c klog)
