--- a/src/klog/CMakeLists.txt
+++ b/src/klog/CMakeLists.txt
@@ -28,6 +28,7 @@ target_compile_options(klog PUBLIC ${KLOG_CMAKE_C_FLAGS})
 target_compile_definitions(klog PUBLIC ${KLOG_COMPILE_DEFINITIONS})
 
 if (KLOG_BUILD_TESTS)
+    create_unit_test_plain(ut/ut-klog_deinitialize.c klog)
     create_unit_test_plain(ut/ut-klog_format_logger_name.c klog)
     create_unit_test_plain(ut/ut-klog_format_prefix.c klog)
     create_unit_test_plain(ut/ut-klog_format_source_location.c klog)
@@ -37,6 +38,7 @@ if (KLOG_BUILD_TESTS)
     create_unit_test_plain(ut/ut-klog_initialize_level_strings_buffer.c klog)
     create_unit_test_plain(ut/ut-klog_logger_create.c klog)
     create_unit_test_plain(ut/ut-klog_logger_set_level.c klog)
+    create_unit_test_plain(ut/ut-klog_prefix_buffer_usage.c klog)
 
     create_functional_test(ft/ft-klog_basic.c klog)
     create_functional_test(ft/ft-klog_console.c klog)
